@@ -18,14 +18,14 @@
 #
 
 IF(NOT DEFINED _MANAGE_GCONF_CMAKE_)
-    FIND_PROGRAM(GCONFTOOL_CMD NAMES gconftool-2 gconftool)
-
-    IF(${GCONFTOOL_CMD} STREQUAL "GCONFTOOL_CMD-NOTFOUND")
-	MESSAGE(FATAL_ERROR "gconftool and gconftool-2 are not found, please install GConf or GConf2.")
-    ENDIF()
+    SET(_MANAGE_GCONF_CMAKE_ DEFINED)
+    INCLUDE(ManageDependency)
+    MANAGE_DEPENDENCY(BUILD_REQUIRES GCONF2 REQUIRED 
+	PKG_CONFIG "gconf-2.0" FEDORA_NAME "GConf2" DEVEL
+	)
 
     IF (NOT DEFINED GCONF_SCHEMAS_FILE)
-	SET(GCONF_SCHEMAS_FILE  "${PROJECT_NAME}.schemas")
+	SET(GCONF_SCHEMAS_FILE  "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.schemas")
     ENDIF(NOT DEFINED GCONF_SCHEMAS_FILE)
 
     GET_FILENAME_COMPONENT(_gconf_schemas_basename ${GCONF_SCHEMAS_FILE} NAME)
@@ -46,7 +46,7 @@ IF(NOT DEFINED _MANAGE_GCONF_CMAKE_)
 
     ADD_CUSTOM_TARGET(uninstall_schemas
 	COMMAND GCONF_CONFIG_SOURCE=${GCONF_CONFIG_SOURCE}
-	${GCONFTOOL_CMD} --makefile-uninstall-rule
+	${GCONF2_EXECUTABLE} --makefile-uninstall-rule
 	${GCONF_SCHEMAS_INSTALLED_DIR}/${_gconf_schemas_basename}
 	COMMENT "Uninstalling schemas"
 	)
@@ -54,14 +54,14 @@ IF(NOT DEFINED _MANAGE_GCONF_CMAKE_)
     ADD_CUSTOM_TARGET(install_schemas
 	COMMAND cmake -E copy ${GCONF_SCHEMAS_FILE} ${GCONF_SCHEMAS_INSTALLED_DIR}/${_gconf_schemas_basename}
 	COMMAND GCONF_CONFIG_SOURCE=${GCONF_CONFIG_SOURCE}
-	${GCONFTOOL_CMD} --makefile-install-rule
+	${GCONF2_EXECUTABLE} --makefile-install-rule
 	${GCONF_SCHEMAS_INSTALLED_DIR}/${_gconf_schemas_basename}
 	DEPENDS ${GCONF_SCHEMAS_FILE}
 	COMMENT "Installing schemas"
 	)
 
-    INSTALL(FILES ${GCONF_SCHEMAS_FILE}
-	DESTINATION "${GCONF_SCHEMAS_INSTALLED_DIR}")
+    MANAGE_FILE_INSTALL(SYSCONF ${GCONF_SCHEMAS_FILE}
+	DEST_SUBDIR "gconf/schemas")
 ENDIF(NOT DEFINED _MANAGE_GCONF_CMAKE_)
 
 
